--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,9 +11,9 @@
 
     {% include "header.njk" %}
 
-    <main class="page-main">
+    <main class="main">
       <h1 class="catalog-title">Каталог продукции</h1>
-      <ul class="products">
+      <ul class="products-list">
         <li class="product-card">
           <img class="product-card__image" src="img/catalog/chiken500.png" alt="Курица">
           <div class="product-card__text">
@@ -113,30 +113,30 @@
       </ul>
       <section class="additional">
         <h2 class="additional__title">Дополнительные товары</h2>
-        <ul class="additional-products">
-          <li class="product">
-            <span class="product__name">сахарозаменитель</span>
-            <span class="product__unit">1 упаковка (100 г)</span>
-            <span class="product__price">200 Р.</span>
-            <a href="#" class="product__order-button">заказать</a>
+        <ul class="additional-products-list">
+          <li class="product-item">
+            <span class="product-item__name">сахарозаменитель</span>
+            <span class="product-item__unit">1 упаковка (100 г)</span>
+            <span class="product-item__price">200 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
           </li>
-          <li class="product">
-            <span class="product__name">питьевая вода</span>
-            <span class="product__unit">5 литров</span>
-            <span class="product__price">50 Р.</span>
-            <a href="#" class="product__order-button">заказать</a>
+          <li class="product-item">
+            <span class="product-item__name">питьевая вода</span>
+            <span class="product-item__unit">5 литров</span>
+            <span class="product-item__price">50 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
           </li>
-          <li class="product">
-            <span class="product__name">молоко</span>
-            <span class="product__unit">1 литр</span>
-            <span class="product__price">100 Р.</span>
-            <a href="#" class="product__order-button">заказать</a>
+          <li class="product-item">
+            <span class="product-item__name">молоко</span>
+            <span class="product-item__unit">1 литр</span>
+            <span class="product-item__price">100 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
           </li>
-          <li class="product">
-            <span class="product__name">витамины</span>
-            <span class="product__unit">1 упаковка (30 г)</span>
-            <span class="product__price">300 Р.</span>
-            <a href="#" class="product__order-button">заказать</a>
+          <li class="product-item">
+            <span class="product-item__name">витамины</span>
+            <span class="product-item__unit">1 упаковка (30 г)</span>
+            <span class="product-item__price">300 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
           </li>
         </ul>
         <div class="ad">
