--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
     {% include "header.njk" %}
 
-    <main class="page-main">
+    <main class="main">
 
       <div class="background"></div>
       <h1 class="page__title-hidden visually-hidden">
