--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
       <section class="promo">
         <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
         <p class="promo__text">Занялся собой? Займись котом!</p>
-        <div class="image-container">
+        <div class="promo__image-container">
           <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
         </div>
         <a href="#" class="promo__button button">Подобрать программу</a>
@@ -54,16 +54,16 @@
         </ol>
       </section>
       <section class="example">
-        <div class="example-facts">
+        <div class="example__facts">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
-          <dl class="example-facts__item">
-            <dt class="example-facts__item-explanation">снижение веса</dt>
-            <dd class="example-facts__item-fact">5 кг</dd>
-            <dt class="example-facts__item-explanation">затрачено времени</dt>
-            <dd class="example-facts__item-fact">60 дней</dd>
+          <dl class="example__facts-item">
+            <dt class="example__facts-item-explanation">снижение веса</dt>
+            <dd class="example__facts-item-fact">5 кг</dd>
+            <dt class="example__facts-item-explanation">затрачено времени</dt>
+            <dd class="example__facts-item-fact">60 дней</dd>
             <dt class="example__spending">Затраты на&nbsp;питание:</dt>
-            <dd class="example-facts__item-fact example-facts__item-fact--spending">15&nbsp;000&nbsp;РУБ.</dd>
+            <dd class="example__facts-item-fact example__facts-item-fact--spending">15&nbsp;000&nbsp;РУБ.</dd>
           </dl>
         </div>
         <div class="slider">
