--- a/source/index.html
+++ b/source/index.html
@@ -8,17 +8,19 @@
 <body class="page__body">
 
   <div class="page__centerer">
+    <div class="background"></div>
 
   {% include "./templates/header.twig" %}
 
   <main class="main">
-    <div class="background"></div>
     <h1 class="page__title-hidden visually-hidden">
       Cat energy
     </h1>
     <section class="promo">
-      <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
-      <p class="promo__text">Занялся собой? Займись котом!</p>
+      <div class="promo__text-container">
+        <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
+        <p class="promo__text">Занялся собой? Займись котом!</p>
+      </div>
       <div class="promo__image-container">
         <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
       </div>
@@ -57,13 +59,19 @@
       <div class="example__facts">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
-        <dl class="example__facts-item">
-          <dt class="example__facts-item-explanation">снижение веса</dt>
-          <dd class="example__facts-item-fact">5 кг</dd>
-          <dt class="example__facts-item-explanation">затрачено времени</dt>
-          <dd class="example__facts-item-fact">60 дней</dd>
-          <dt class="example__spending">Затраты на&nbsp;питание:</dt>
-          <dd class="example__facts-item-fact example__facts-item-fact--spending">15&nbsp;000&nbsp;РУБ.</dd>
+        <dl class="example__facts-list">
+          <div class="example__item-container example__item-container--mass">
+            <dt class="example__facts-item-explanation example__facts-item-explanation--mass"><span class="example__facts-item-explanation--text">снижение веса</span></dt>
+            <dd class="example__facts-item-fact example__facts-item-fact--mass">5 кг</dd>
+          </div>
+          <div class="example__item-container example__item-container--time">
+            <dt class="example__facts-item-explanation example__facts-item-explanation--time"><span class="example__facts-item-explanation--text">затрачено времени</span></dt>
+            <dd class="example__facts-item-fact example__facts-item-fact--time">60 дней</dd>
+          </div>
+          <div class="example__item-container example__item-container--spending">
+            <dt class="example__facts-item-explanation example__facts-item-explanation--spending">Затраты на&nbsp;питание:</dt>
+            <dd class="example__facts-item-fact example__facts-item-fact--spending">15&nbsp;000&nbsp;РУБ.</dd>
+          </div>
         </dl>
       </div>
       <div class="slider">
