fix example__facts-item-explanation--text to example__facts-item-explanetion-text

--- a/source/index.html
+++ b/source/index.html
@@ -57,15 +57,15 @@
     </section>
     <section class="example">
       <div class="example__facts">
-        <h2 class="example__title">Живой пример</h2>
+        <h2 class="example__title">Живой&nbsp;пример</h2>
         <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
         <dl class="example__facts-list">
           <div class="example__item-container example__item-container--mass">
-            <dt class="example__facts-item-explanation example__facts-item-explanation--mass"><span class="example__facts-item-explanation--text">снижение веса</span></dt>
+            <dt class="example__facts-item-explanation example__facts-item-explanation--mass"><span class="example__facts-item-explanation-text">снижение веса</span></dt>
             <dd class="example__facts-item-fact example__facts-item-fact--mass">5 кг</dd>
           </div>
           <div class="example__item-container example__item-container--time">
-            <dt class="example__facts-item-explanation example__facts-item-explanation--time"><span class="example__facts-item-explanation--text">затрачено времени</span></dt>
+            <dt class="example__facts-item-explanation example__facts-item-explanation--time"><span class="example__facts-item-explanation-text">затрачено времени</span></dt>
             <dd class="example__facts-item-fact example__facts-item-fact--time">60 дней</dd>
           </div>
           <div class="example__item-container example__item-container--spending">
