--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,7 @@
 
 <body class="page__body">
 
-  <div class="page__centerer">
-    <div class="background"></div>
+
 
   {% include "./templates/header.twig" %}
 
@@ -16,94 +15,96 @@
     <h1 class="page__title-hidden visually-hidden">
       Cat energy
     </h1>
-    <section class="promo">
-      <div class="promo__text-container">
-        <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
-        <p class="promo__text">Занялся собой? Займись котом!</p>
-      </div>
-      <div class="promo__image-container">
-        <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
-      </div>
-      <a href="#" class="promo__button button">Подобрать программу</a>
-    </section>
-    <section class="nutrition-programm">
-      <div class="nutrition-programm__card nutrition-programm__card--slim">
-        <h2 class="nutrition-programm__title">Похудение</h2>
-        <p class="nutrition-programm__text">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a href="#" class="nutrition-programm__link">Каталог slim</a>
-      </div>
-      <div class="nutrition-programm__card nutrition-programm__card--fat">
-        <h2 class="nutrition-programm__title">Набор массы</h2>
-        <p class="nutrition-programm__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-        <a href="#" class="nutrition-programm__link">Каталог Pro</a>
-      </div>
-    </section>
-    <section class="description">
-      <h2 class="description__title">Как это работает</h2>
-      <ol class="description__list">
-        <li class="description__item description__item--feed">
-            <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
-        </li>
-        <li class="description__item description__item--powder">
-            <p class="description__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.</p>
-        </li>
-        <li class="description__item description__item--eating">
-            <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
-        </li>
-        <li class="description__item description__item--timer">
-            <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
-        </li>
-      </ol>
-    </section>
-    <section class="example">
-      <div class="example__facts">
-        <h2 class="example__title">Живой&nbsp;пример</h2>
-        <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
-        <dl class="example__facts-list">
-          <div class="example__item-container example__item-container--mass">
-            <dt class="example__facts-item-explanation example__facts-item-explanation--mass"><span class="example__facts-item-explanation-text">снижение веса</span></dt>
-            <dd class="example__facts-item-fact example__facts-item-fact--mass">5 кг</dd>
-          </div>
-          <div class="example__item-container example__item-container--time">
-            <dt class="example__facts-item-explanation example__facts-item-explanation--time"><span class="example__facts-item-explanation-text">затрачено времени</span></dt>
-            <dd class="example__facts-item-fact example__facts-item-fact--time">60 дней</dd>
-          </div>
-          <div class="example__item-container example__item-container--spending">
-            <dt class="example__facts-item-explanation example__facts-item-explanation--spending">Затраты на&nbsp;питание:</dt>
-            <dd class="example__facts-item-fact example__facts-item-fact--spending">15&nbsp;000&nbsp;РУБ.</dd>
-          </div>
-        </dl>
-      </div>
-      <div class="slider">
-        <div class="slider__images">
-          <img src="img/cat-fat.png" alt="было" class="slider__image slider__image--was">
-          <img src="img/cat-skinny.png" alt="стало" class="slider__image slider__image--now">
+    <div class="page__centerer">
+      <section class="promo">
+        <div class="promo__text-container">
+          <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
+          <p class="promo__text">Занялся собой? Займись котом!</p>
         </div>
-        <div class="slider__controls-was-now" hidden>
-          <span class="slider__controls-text slider__controls-text--was">Было</span>
-          <div class="slider__progress">
-            <div class="slider__progress-line">
-              <button type="button" class="slider__button"><span class="visually-hidden">кнопка слайдера</span></button>
+        <div class="promo__image-container">
+          <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
+        </div>
+        <a href="#" class="promo__button button">Подобрать программу</a>
+      </section>
+      <section class="nutrition-programm">
+        <div class="nutrition-programm__card nutrition-programm__card--slim">
+          <h2 class="nutrition-programm__title">Похудение</h2>
+          <p class="nutrition-programm__text">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="#" class="nutrition-programm__link">Каталог slim</a>
+        </div>
+        <div class="nutrition-programm__card nutrition-programm__card--fat">
+          <h2 class="nutrition-programm__title">Набор массы</h2>
+          <p class="nutrition-programm__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="#" class="nutrition-programm__link">Каталог Pro</a>
+        </div>
+      </section>
+      <section class="description">
+        <h2 class="description__title">Как это работает</h2>
+        <ol class="description__list">
+          <li class="description__item description__item--feed">
+              <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="description__item description__item--powder">
+              <p class="description__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.</p>
+          </li>
+          <li class="description__item description__item--eating">
+              <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
+          </li>
+          <li class="description__item description__item--timer">
+              <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
+          </li>
+        </ol>
+      </section>
+    </div>
+    <section class="example">
+      <div class="page__centerer example__container">
+        <div class="example__facts">
+          <h2 class="example__title">Живой&nbsp;пример</h2>
+          <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
+          <dl class="example__facts-list">
+            <div class="example__item-container example__item-container--mass">
+              <dt class="example__facts-item-explanation example__facts-item-explanation--mass"><span class="example__facts-item-explanation-text">снижение веса</span></dt>
+              <dd class="example__facts-item-fact example__facts-item-fact--mass">5 кг</dd>
             </div>
+            <div class="example__item-container example__item-container--time">
+              <dt class="example__facts-item-explanation example__facts-item-explanation--time"><span class="example__facts-item-explanation-text">затрачено времени</span></dt>
+              <dd class="example__facts-item-fact example__facts-item-fact--time">60 дней</dd>
+            </div>
+            <div class="example__item-container example__item-container--spending">
+              <dt class="example__facts-item-explanation example__facts-item-explanation--spending">Затраты на&nbsp;питание:</dt>
+              <dd class="example__facts-item-fact example__facts-item-fact--spending">15&nbsp;000&nbsp;РУБ.</dd>
+            </div>
+          </dl>
+        </div>
+        <div class="slider">
+          <div class="slider__images">
+            <img src="img/cat-fat.png" alt="было" class="slider__image slider__image--was">
+            <img src="img/cat-skinny.png" alt="стало" class="slider__image slider__image--now">
           </div>
-          <span class="slider__controls-text slider__controls-text--now">Стало</span>
+          <div class="slider__controls-was-now" hidden>
+            <span class="slider__controls-text slider__controls-text--was">Было</span>
+            <div class="slider__progress">
+              <div class="slider__progress-line">
+                <button type="button" class="slider__button"><span class="visually-hidden">кнопка слайдера</span></button>
+              </div>
+            </div>
+            <span class="slider__controls-text slider__controls-text--now">Стало</span>
+          </div>
         </div>
       </div>
     </section>
     <section class="contacts">
-      <h2 class="visually-hidden">Наш адрес</h2>
-      <div class="contacts__text">
-        <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
-        <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
+      <div class="page__centerer">
+        <h2 class="visually-hidden">Наш адрес</h2>
+        <div class="contacts__text">
+          <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
+          <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
+        </div>
+        <div class="contacts__map"></div>
       </div>
-      <div class="contacts__map"></div>
     </section>
   </main>
-
   {% include "./templates/footer.twig" %}
-
-  </div>
-
 </body>
 
 </html>
